[ plugin ] Init compiler plugin